--- a/res/layout/edit_item.xml
+++ b/res/layout/edit_item.xml
@@ -26,6 +26,12 @@
 	 android:layout_width="fill_parent"
 	 android:layout_height="wrap_content"
 	 android:textSize="18sp"
+	 android:gravity="top"
 	 android:layout_weight="1" />
 	
+	<Button
+	 android:id="@+id/submit"
+	 android:layout_width="wrap_content"
+	 android:layout_height="wrap_content"
+	 android:text="@string/submit" />
 </LinearLayout>
