--- a/res/layout/view_item.xml
+++ b/res/layout/view_item.xml
@@ -9,7 +9,10 @@
 	 android:id="@+id/view_title"
 	 android:layout_width="wrap_content"
 	 android:layout_height="wrap_content"
+	 android:layout_marginTop="10px"
+	 android:layout_marginBottom="15px"
 	 android:text="TextView"
+	 android:textSize="24sp"
 	 android:layout_gravity="center_horizontal" />
 
 	<TextView
