--- a/res/menu/list_context.xml
+++ b/res/menu/list_context.xml
@@ -1,4 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 	<item android:id="@+id/edit_item"
 	 android:title="@string/edit_item" />
+	<item android:id="@+id/delete_item"
+	 android:title="@string/delete_item" />
 </menu>
